[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "broad-semantic-search-implementation"
version = "0.1.0"
description = "Implementation for broad semantic search for scientific literature retrieval"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Yifan Luo", email = "yifanluo2006@gmail.com" },
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
broad-search = "broad_semantic_search.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/broad_semantic_search"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]